@@ -10,10 +10,12 @@ final class PendingRelease extends Release
     private Version $version;
     private \DateTimeImmutable $publishedAt;
 
-    public function __construct(Version $version)
+    public function __construct(Version $version, ?Release $previous = null)
     {
         $this->version = $version;
         $this->publishedAt = new \DateTimeImmutable('now');
+
+        parent::__construct([], $previous);
     }
 
     public function version(): Version
