@@ -2,6 +2,7 @@
 <?php
 
 use Symfony\Component\Console\Application;
+use Zenstruck\Changelog\Command\CreateCommand;
 use Zenstruck\Changelog\Command\InitCommand;use Zenstruck\Changelog\Command\PreviewCommand;
 
 set_time_limit(0);
@@ -19,6 +20,7 @@ $application = new Application('zenstruck/changelog', '@dev');
 $application->addCommands([
     $default = new PreviewCommand(),
     new InitCommand(),
+    new CreateCommand(),
 ]);
 
 $application->setDefaultCommand($default->getName());
